# filesystem-communication-space

./: .envrc  .gitignore  00-foundations.org  01-namespace-as-rendezvous.org  02-primitives-catalog.org  03-patterns-and-idioms.org  04-case-studies.org  05-experiments.org  06-performance-analysis.org  07-security-implications.org  08-historical-evolution.org  09-cross-platform.org  DETANGLING.org  Makefile  README.org  SETUP.md  WORKSPACE.md  filesystem-communication-space.org  publish-config.el  puppeteer-config.json  pyproject.toml
change-requests/: README.org
diagrams/: namespace-social-contract.mmd
experiments/: 2025-01-29-detangle-experiment.org  README.org  test_detangle.el
instrumented/: CLAUDE_MONITORING.md  FUTURE_WORK.md  IPC_TEST_RESULTS.md  STATUS.md  claude-monitor.d  claude-status.sh  demo-summary.sh  fifo-reader.js  fifo-writer.js  fifo_test.sh  test-fifo-complete.sh  trace-claude.sh  trace-demo.sh
scripts/: setup_environment.sh
