[project]
name = "filesystem-communication-space"
version = "0.1.0"
description = "A literate programming exploration of the filesystem as a communication space"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "python-dotenv>=1.0.0",
]
